<resources>

    <!-- common string -->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="state">state</string>
    <string name="title">title</string>
    <string name="item">item</string>
    <string name="error">Error</string>

    <!--guide string -->
    <string name="guide_image">guide image</string>
    <string name="guide_title_1">Powerful task setting function</string>
    <string name="guide_title_2">Convenient list of list</string>
    <string name="guide_title_3">Multiple recording modes</string>
    <string name="guide_content_1">Make you work well</string>
    <string name="guide_content_2">Make your work and life in good order</string>
    <string name="guide_content_3">Make you can record as you like</string>
    <string name="guide_button">Try now</string>

    <!--main string-->
    <string name="app_name">Memo</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="list">List</string>
    <string name="main_add_task">Add a new task</string>
    <string name="main_add_list">Add a new list</string>
    <string name="main_add_note">Add a new note</string>
    <string name="main_finish_dialog_message">Do you want to finish the task ? \nAfter finishing, you will see it in the calendar.</string>
    <string name="main_finish_dialog_title">Finish</string>
    <string name="main_task_no_title">No title</string>
    <string name="main_task_no_alarm">no alarm</string>
    <string name="main_no_data_task_top">No Tasks</string>
    <string name="main_no_data_task_bottom">Tasks will appear here</string>
    <string name="main_no_data_note_top">No Notes</string>
    <string name="main_no_data_note_bottom">Notes will appear here</string>
    <string name="main_no_data_list_top">No Lists</string>
    <string name="main_no_data_list_bottom">Lists will appear here</string>
    <string name="main_delete">Delete</string>

    <!-- list string -->
    <string name="list_hint_title">Please input title of list</string>
    <string name="expand_icon">expand icon</string>
    <string name="start_default">start default</string>
    <string name="list_add_item">Add a item</string>
    <string name="list_delete_tip">Do you want to delete the list</string>

    <!-- task string -->
    <string name="edit_title_hint">Please input content of title</string>
    <string name="view_title_hint">No title</string>
    <string name="item_text_hint">Please input content of text</string>
    <string name="save_successful_notice">save successful</string>
    <string name="save_failed_notice">save failed</string>
    <string name="empty_text_notice">save failed for empty text</string>
    <string name="no_selected_text">Please select a passage first</string>
    <string name="urgent">urgent</string>
    <string name="task_delete_title">Delete Task</string>
    <string name="task_delete_tip">Do you wan to delete the task?</string>
    <string name="note_delete_title">Delete Note</string>
    <string name="note_delete_tip">Do you wan to delete the note?</string>
    <string name="delete_success_notice">Delete successful</string>
    <string name="delete_failed_notice">Delete failed</string>
    <string name="share_stamp">share from \"ohMemo\"</string>
    <string name="welcome_hint">Welcome to ohMemo!</string>

    <!-- alarm string -->
    <string name="alarm_clock">Alarm Clock</string>
    <string name="set_alarm_clock">Set an Alarm Clock</string>
    <string name="ringtone_reminder">Ringtone reminder</string>
    <string name="pop_ups_reminder">Pop-ups reminder</string>
    <string name="alarm_confirm">OK</string>
    <string name="alarm_update">Update the Alarm Clock</string>
    <string name="alarm_delete">Delete the Alarm Clock</string>
    <string name="alarm_set_notice">Set the Alarm successfully</string>
    <string name="alarm_updated_notice">Update the Alarm successfully</string>
    <string name="alarm_updated_failed">failed to update the alarm</string>
    <string name="alarm_set_failed">failed to set the alarm</string>
    <string name="alarm_deleted_failed">failed to delete the alarm</string>
    <string name="alarm_deleted_notice">Delete the Alarm successfully</string>

    <!-- calendar string -->
    <string name="calendar">calendar</string>
    <string name="calendar_year">2018</string>
    <string name="calendar_sunday">Sun</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tues</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thur</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="month_year">%1$s %2$2s</string>
    <string name="guide_hint">You can take multiple selections to check the records for many days</string>
    <string name="guide_ok">Understood</string>

    <!-- audio string -->
    <string name="audio">audio</string>
    <string name="audio_finish">OK</string>
    <string name="audio_time_length">00:00:00</string>
    <string name="audio_delete_title">Delete Audio</string>
    <string name="audio_delete_tip">Do you want to delete the audio?</string>
    <string name="audio_length_limit">The recording time is less than 1S. Please rerecord it.</string>
    <string name="audio_prepare">Recording has not started yet!</string>
    <string name="audio_play_failed">failed to play audio</string>

    <!-- photo string -->
    <string name="photo_gallery">GALLERY</string>
    <string name="photo_camera">CAMERA</string>
    <string name="photo_recording_btnText">photo</string>
    <string name="list_launches_icon">List launches Icon</string>
    <string name="no_sdcard">device has not SDcard!</string>
    <string name="no_memory_dir">no find file directory</string>

    <!-- ImageButton contentDescription -->
    <string name="close_icon">close icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="last_month_icon">last month icon</string>
    <string name="next_month_icon">next month icon</string>
    <string name="back_icon">back icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="share_icon">share icon</string>
    <string name="save_icon">save icon</string>
    <string name="group_icon">group icon</string>
    <string name="image_icon">image icon</string>

</resources>
