<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.CalendarActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/calendar_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/calendar_select"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/last_month"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_ripple"
            android:contentDescription="@string/last_month_icon"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/month_change_left_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/month_year"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/next_month"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_ripple"
            android:contentDescription="@string/next_month_icon"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/month_change_right_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/month_year"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/month_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textColor="@color/calendar_select"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/calendar_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_ripple"
            android:contentDescription="@string/close_icon"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/calendar_close_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/calendar_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_header" />

    <LinearLayout
        android:id="@+id/week_header"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_sunday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_monday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_tuesday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_wednesday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_thursday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_friday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_saturday"
            android:textColor="@color/calendar_week"
            android:textSize="16sp" />
    </LinearLayout>

    <com.shining.calendar.calendar.NCalendar
        android:id="@+id/calendar_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:firstDayOfWeek="Sunday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_header">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/calendar_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

    </com.shining.calendar.calendar.NCalendar>

</android.support.constraint.ConstraintLayout>