<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".home.GuideActivity">

    <ImageView
        android:id="@+id/guide_image"
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/guide_page_one_image"
        android:contentDescription="@string/guide_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/guide_title_1"
        android:textColor="@color/guide_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_image" />

    <TextView
        android:id="@+id/guide_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/guide_content_1"
        android:textColor="@color/guide_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_title" />

    <Button
        android:id="@+id/guide_button"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/guide_button_selector"
        android:textSize="16sp"
        android:textColor="@color/guide_button"
        android:text="@string/guide_button"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="0dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_content" />

</android.support.constraint.ConstraintLayout>