<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/main_titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/main_titlebar_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/main_task_not_click"
            android:text="@string/task"
            />
        <TextView
            android:id="@+id/main_titlebar_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/main_task_not_click"
            android:gravity="center"
            android:text="@string/list"
            />
        <TextView
            android:id="@+id/main_titlebar_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/main_task_not_click"
            android:gravity="center"
            android:text="@string/note"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/main_titlebar_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/calendar_icon"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_marginTop="11dp"
        android:layout_marginRight="13dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/main_line_first"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/main_line"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/main_titlebar_calendar"
        app:layout_constraintLeft_toLeftOf="@id/main_titlebar"
        app:layout_constraintRight_toRightOf="@+id/main_titlebar_calendar"
        />
    <LinearLayout
        android:id="@+id/main_titlebar_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/main_line_first"
        app:layout_constraintLeft_toLeftOf="@+id/main_line_first"
        app:layout_constraintRight_toRightOf="@id/main_line_first">
        
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/main_additem"/>
        <TextView
            android:id="@+id/main_titlebar_addtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:textColor="@color/main_add_item"
            android:text="Add a new task"/>
    </LinearLayout>
    <View
        android:id="@+id/main_line_second"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/main_line"
        app:layout_constraintTop_toBottomOf="@id/main_titlebar_add"
        app:layout_constraintLeft_toLeftOf="@id/main_titlebar"
        app:layout_constraintRight_toRightOf="@+id/main_titlebar_calendar"
        />
    <FrameLayout
        android:id="@+id/main_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_line_second"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>